day01：环境、模块搭建